# saxo-openapi-client-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
samples/: 01_get_started.ipynb  02_advanced_login.ipynb  03_price_alerts_crud.ipynb  04_instrument_search.ipynb  README.md  streaming_sample.py
saxo_apy/: __init__.py  client.py  models.py  redirect_server.py  utils.py
tests/: test_client.py  test_utils.py
tests/fixtures/: dummy_access_token.txt  dummy_app_config_live.json  dummy_app_config_sim.json  models.py
