[project]
name = "saxo-apy"
version = "0.1.6"
authors = [
  { name="Gid van der Ven", email="me@gid.works" },
]
description = "Python Client for Saxo Bank OpenAPI"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English"
]
dependencies = [
  "Flask==2.1.3",
  "pydantic==1.9.1",
  "requests==2.28.1",
  "PyJWT==2.4.0",
]

[project.urls]
"Homepage" = "https://github.com/gidven/saxo-openapi-client-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"