[project]
name = "saxo-apy"
version = "0.1.14"
authors = [
  {name="Gid van der Ven", email="giddevanderven@gmail.com"}
]
description = "Python Client for Saxo Bank OpenAPI"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Natural Language :: English"
]
dependencies = [
  "Flask==2.2.2",
  "pydantic==1.10.2",
  "httpx==0.23.0",
  "websockets==10.4",
  "loguru==0.6.0"
]

[project.urls]
"Homepage" = "https://github.com/gidven/saxo-openapi-client-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"